--- a/src/scss/Home.scss
+++ b/src/scss/Home.scss
@@ -1,21 +1,71 @@
 .intro_container {
-  background-color: aliceblue;
+  background: url("../img/intro_logo.png");
+  background-repeat: no-repeat;
+  background-size: cover;
   text-align: center;
-  padding: 20px;
+  padding: 150px;
+
+  p {
+    font-size: 20px;
+    font-weight: bold;
+    color: black;
+
+    span {
+      color: red;
+    }
+  }
+}
+
+#about {
+  visibility: hidden;
 }
 
 .about_container {
-  margin-top: 50px;
   text-align: center;
-  border: 1px solid red;
   padding: 20px;
-}
+  padding-top: 20px;
 
-.about_box {
-  display: flex;
+  h1 {
+    font-weight: bolder;
+  }
 
-  h2 {
-    flex: 1;
+  a {
+    visibility: hidden;
+  }
+
+  .about_box {
+    text-align: center;
+    margin: 10px;
+
+    .about_content {
+      border-radius: 10px;
+      // box-shadow: 3px 3px 3px rgb(190, 190, 190);
+      padding: 10px;
+      margin: 5px;
+      display: inline-block;
+      width: 300px;
+      text-align: left;
+
+      img {
+        margin-right: 10px;
+        vertical-align: middle;
+      }
+
+      .about_text_box {
+        display: inline-block;
+        vertical-align: middle;
+
+        .about_title {
+          font-weight: bold;
+          font-size: 20px;
+        }
+
+        .about_value {
+          font-weight: bold;
+          font-size: 16px;
+        }
+      }
+    }
   }
 }
 
@@ -23,19 +73,32 @@
   padding: 20px;
   text-align: center;
   background-color: salmon;
+
+  #archive {
+    visibility: hidden;
+  }
+
+  h1 {
+    color: white;
+  }
+
   .skills_box {
     text-align: center;
-  }
-}
 
-.projects_container {
-  padding: 20px;
-  text-align: center;
-  background-color: deepskyblue;
+    .skills_content_box {
+      width: 450px;
+      display: inline-block;
+      vertical-align: top;
 
-  img {
-    margin: 5px;
-    border: 1px solid salmon;
+      .skills_title {
+        background-color: white;
+        margin: 10px;
+        border-radius: 10px;
+        padding: 20px;
+        padding-top: 10px;
+        box-shadow: 3px 3px 3px rgba(128, 128, 128, 0.61);
+      }
+    }
   }
 }
 
@@ -44,22 +107,49 @@
   text-align: center;
   background-color: rgb(66, 66, 66);
 
+  #projects {
+    visibility: hidden;
+  }
+
   h1 {
     color: white;
   }
 
   .archive_box {
-    img {
-      width: 39%;
+    .archive_content_box {
+      background-color: white;
+      padding: 20px;
+      border-radius: 10px;
+      width: 450px;
+      height: 300px;
+      display: inline-block;
+      margin: 30px;
+      vertical-align: middle;
+
+      a {
+        display: block;
+        margin-top: 10px;
+      }
+
+      ul {
+        text-align: left;
+      }
     }
   }
 }
 
-footer {
+.projects_container {
+  padding: 20px;
   text-align: center;
-  border: 1px solid darkcyan;
+  background-color: deepskyblue;
 
-  p {
-    text-align: center;
+  h1 {
+    color: white;
+  }
+
+  img {
+    margin: 5px;
+    border-radius: 10px;
+    box-shadow: 3px 3px 3px gray;
   }
 }
