--- a/src/scss/Navigation.scss
+++ b/src/scss/Navigation.scss
@@ -78,3 +78,53 @@
     }
   }
 }
+
+.mobile_nav {
+  position: fixed;
+  background-color: white;
+
+  .mobile_nav_box {
+    padding: 25px;
+    padding-bottom: 0px;
+    list-style: none;
+
+    .intro_logo {
+      font-weight: bolder;
+      font-size: 26px;
+      display: inline-block;
+      text-decoration: none;
+      color: black;
+    }
+
+    .mobile_nav_toggle {
+      cursor: pointer;
+      margin-left: 54px;
+    }
+
+    ul {
+      display: flex;
+      list-style: none;
+      padding: 5px;
+      flex-direction: column;
+      text-align: center;
+
+      a {
+        font-weight: bold;
+        font-size: 17px;
+        text-decoration: none;
+        color: black;
+        margin: 5px;
+        padding: 3px;
+
+        li {
+          display: inline-block;
+          margin-left: 7px;
+        }
+      }
+
+      a :hover {
+        color: tomato;
+      }
+    }
+  }
+}
