update nav menu background-color to aliceblue

--- a/src/scss/Navigation.scss
+++ b/src/scss/Navigation.scss
@@ -41,7 +41,8 @@
 .change_nav {
   position: fixed;
   width: 100%;
-  background-color: white;
+  // background-color: rgba(240, 248, 255, 0.925);
+  background-color: aliceblue;
 
   ul {
     display: flex;
