--- a/src/scss/Home.scss
+++ b/src/scss/Home.scss
@@ -1,15 +1,22 @@
 .intro_container {
-  background: url("../img/intro_logo.png");
+  background-image: url("../img/intro_logo.png");
   background-repeat: no-repeat;
   background-size: cover;
   text-align: center;
   padding-bottom: 150px;
   padding-top: 75px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
   p {
+    width: 420px;
+    border-radius: 10px;
+    padding: 15px;
     font-size: 17px;
     font-weight: bold;
     color: black;
+    background-color: rgba(255, 255, 255, 0.589);
 
     span {
       color: red;
